--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "dashboard",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "axios": "^1.7.7",
+    "compression": "^1.8.1",
+    "express": "^4.21.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.5",
     "react-scripts": "5.0.1"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "scripts": {
     "start": "cross-env PORT=3001 react-scripts start",
